# BIOS-DESKTOPSTREAMER

./: CMakeLists.txt  LICENSE  README.md
apps/DesktopStreamer/src/: MainWindow.cpp  MainWindow.h  iconDesktopStreamer.rc  main.cpp
src/: DisplayGroupGraphicsView.cpp  DisplayGroupListWidgetProxy.cpp  DynamicTexture.cpp  GLWindow.cpp  ParallelPixelStream.cpp  Texture.h  main.cpp  main.h
